# rocket-craft

./: .anti-llm-ignore  .dockerignore  .editorconfig  .env.example  .gitignore  .rocket.json  AGENTS.md  ANTI_LLM_ARCHITECTURE.md  ANTI_LLM_DIAGRAMS.md  ANTI_LLM_INDEX.md  APP_STORE_OBSOLESCENCE_PLAN.md  Agent07_Mecha_Materials.mtlx  BREEDS_DOCTRINE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_CONTEXT_SPR.md  Cargo.toml  DELIVERABLES.md  DESIGN_ENGINERESULT_TYPESTATE.md  DFLSS.md  DOCTOR_1000X_WIRING.md  DX_COMPLETIONS_WIRING.md  DX_ONBOARDING_WIRING.md  Dockerfile  ENGINERESULT_INDEX.md  ENGINERESULT_QUICK_REFERENCE.txt  ENGINERESULT_TYPESTATE_SPEC.rs  GAP_RESOLUTION_REPORT.md  GEMINI.md  GGEN_GAMES_PRESS_RELEASE_2030.md  GGEN_MARKETPLACE_ARD.md  GGEN_MARKETPLACE_INTEGRATION_STRATEGY.md  GGEN_MARKETPLACE_PRD.md  GMF_ARD.md  GMF_PRD.md  GOVERNANCE_ADMISSION_LAW.md  GUNDAM_NEXUS_MANUFACTURING_PRD.md  HBR_THESIS_2030_BLUE_OCEAN.md  HELP.md  (+140 more)
asset-pipeline/: CLAUDE.md  Cargo.toml  pipeline.toml
asset-pipeline/pipeline-cli/: Cargo.toml
asset-pipeline/pipeline-cli/src/: main.rs
asset-pipeline/pipeline-core/: Cargo.toml
asset-pipeline/pipeline-core/src/: config.rs  conversion.rs  discovery.rs  error.rs  lib.rs  reporting.rs  staging.rs  types.rs  validation.rs
asset-pipeline/scripts/: blender_convert.py
blueprint-rs/blueprint-core/: Cargo.toml
blueprint-rs/blueprint-core/examples/: fps_controller.rs  gundam_mech_character.rs  hello_blueprint.rs  ui_widget.rs
blueprint-rs/blueprint-core/src/: ast.rs  builder.rs  diff.rs  layout.rs  lib.rs  parser.rs  patterns.rs  registry.rs  render.rs  t3d.rs  types.rs  validator.rs
blueprint-rs/blueprint-macros/: Cargo.toml  README.md
blueprint-rs/blueprint-macros/src/: lib.rs
blueprint-rs/blueprint-testing/: Cargo.toml
blueprint-rs/blueprint-testing/src/: lib.rs
blueprint-rs/blueprint-testing/tests/: parser_tdd.rs
chicago-tdd-tools/: Cargo.toml  GEMINI.md  README.md  combinatorial_report.json
chicago-tdd-tools/src/: aimbot.rs  cli.rs  coordinate.rs  discovery.rs  lib.rs  logging.rs
chicago-tdd-tools/src/domain/: account.rs  environment.rs  mod.rs  transfer.rs
chicago-tdd-tools/tests/: account_behavior.rs  aimbot_behavior.rs  artifact_behavior.rs  blueprint_behavior.rs  coordinate_behavior.rs  discovery_behavior.rs  factory_walkthrough_behavior.rs  manufacturing_cell_behavior.rs  receipt_behavior.rs  suite_validation.rs  transfer_behavior.rs  wasm_pipeline_behavior.rs
chicago-tdd-tools/tests/ocel/: anti_llm_cheat_lsp_ocel.json  anti_llm_cheat_lsp_ocel.receipt.json
crates/ggen-asset-lsp/: Cargo.toml
crates/ggen-asset-lsp/src/: code_actions.rs  diagnostics.rs  main.rs  ocel.rs  server.rs
crates/rocket_preue4_verifier/: Cargo.toml
crates/rocket_preue4_verifier/benches/: bench_authority_kernels.rs
crates/rocket_preue4_verifier/ggen/: ggen.toml
crates/rocket_preue4_verifier/src/: audit.json  authority.rs  error.rs  error.rs.backup  geometry.rs  lib.rs  motion.rs  ocel.rs  prediction.rs  projection.rs  receipt.rs  report.rs  semantic_lod.rs  simd.rs  simd.rs.backup  skin.rs  transitions.rs  transitions.rs.backup  verifier.rs  verifier.rs.backup
crates/rocket_preue4_verifier/tests/: chaos_gundam_factory.rs  chaos_mechbirth.rs  integration_gundam_factory.rs  integration_mechbirth.rs  stress_authority_fields.rs  unit_authority.rs  unit_geometry_motion.rs  unit_lod.rs  unit_prediction.rs  unit_receipts.rs
genie3-rs/: Cargo.toml  genie3.h
genie3-rs/src/: ffi.rs  lib.rs  simulation.rs  types.rs  world.rs
genie3-rs/tests/: integration_tests.rs
gmf-ocel-adapter/: Cargo.toml
gmf-ocel-adapter/src/: events.rs  lib.rs  market.rs  objects.rs  ocel.rs
gmf-ocel-adapter/tests/: event_taxonomy_behavior.rs  market_behavior.rs
gmf-ocel-adapter/tests/ocel/: anti_llm_cheat_lsp_ocel.json  anti_llm_cheat_lsp_ocel.receipt.json
infinity-blade-4/mud/: Cargo.toml
infinity-blade-4/mud/ib4-ai/: Cargo.toml
infinity-blade-4/mud/ib4-combat/: Cargo.toml
infinity-blade-4/mud/ib4-core/: Cargo.toml
infinity-blade-4/mud/ib4-integration-tests/: Cargo.toml
infinity-blade-4/mud/ib4-mud/: Cargo.toml
infinity-blade-4/mud/ib4-progression/: Cargo.toml
nexus-engine/: CLAUDE.md  Cargo.toml  ggen.toml
nexus-engine/.ggen/: sync-state.json
nexus-engine/.ggen/cache/: manifest.sha256  rules.sha256
nexus-engine/.ggen/keys/: signing.key  verifying.key
nexus-engine/.ggen/receipts/: sync-20260618-053448.json  sync-20260618-073858.json  sync-20260618-074305.json  sync-20260618-074310.json  sync-20260618-074428.json  sync-20260618-074526.json  (+7 more)
nexus-engine/templates/: gundam_nexus.rs.tera  machine.rs.tera  mobility_defaults.rs.tera
rocket-simulator/simulator-core/: Cargo.toml
tools/rocket-cmd/: Cargo.toml
tools/rocket-sdk/: Cargo.toml
unify-rs/: CLAUDE.md  Cargo.toml
unify-rs/anti-llm-cheat-lsp/: Cargo.toml
unify-rs/genie-core/: Cargo.toml
unify-rs/unify/: Cargo.toml
unify-rs/unify-admission/: Cargo.toml
unify-rs/unify-automl/: Cargo.toml
unify-rs/unify-bp/: Cargo.toml
unify-rs/unify-cli/: Cargo.toml
unify-rs/unify-codegen/: Cargo.toml
unify-rs/unify-config/: Cargo.toml
unify-rs/unify-core/: Cargo.toml
unify-rs/unify-ffi/: Cargo.toml  build.rs  gap-report.md
unify-rs/unify-integration-tests/: Cargo.toml
unify-rs/unify-lsp/: Cargo.toml
unify-rs/unify-macros/: Cargo.toml
unify-rs/unify-mcp/: Cargo.toml
unify-rs/unify-ocel/: Cargo.toml
unify-rs/unify-otel/: Cargo.toml
unify-rs/unify-pm/: Cargo.toml
unify-rs/unify-rdf/: Cargo.toml
unify-rs/unify-receipts/: Cargo.toml
unify-rs/unify-rocket/: Cargo.toml
unify-rs/unify-sem/: Cargo.toml
unify-rs/unify-test/: Cargo.toml
unify-rs/unify-wasm/: Cargo.toml
wasm-threads/: Cargo.toml  THESIS.md
wasm-threads/js-integration/: game-worker.ts  integration.test.ts  package-lock.json  package.json  tsconfig.json  types.ts  ui-bridge.ts
wasm-threads/wasm-core/: Cargo.toml
wasm-threads/wasm-game-logic/: Cargo.toml
wasm-threads/wasm-patterns/: Cargo.toml
wasm-threads/wasm-tests/: Cargo.toml
wasm-threads/wasm-ui/: Cargo.toml
(+3352 files in other folders)
