[package]
name = "rocket-craft-root"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85"
description = "Rocket-Craft monorepo root package"

[dependencies]
cargo-cicd = { git = "https://github.com/seanchatmangpt/cargo-cicd.git", features = ["process-data", "autonomic"] }

[patch."https://github.com/seanchatmangpt/cargo-cicd.git"]
cargo-cicd = { path = "/Users/sac/cargo-cicd" }

[[bin]]
name = "cargo-cicd"
path = "src/bin/cargo-cicd.rs"

[workspace]
resolver = "2"
members = [
    "rocket-simulator/simulator-core",
]
exclude = [
    "unify-rs",
    "wasm-threads",
    "chicago-tdd-tools",
    "infinity-blade-4/mud",
    "nexus-engine",
    "blueprint-rs",
    "tools",
]

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2.0"
anyhow      = "1"
blake3      = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive"] }
rand        = "0.10"
lsp-max          = "26.6.9"
lsp-max-protocol = "26.6.9"
lsp-max-runtime  = "26.6.9"

