[workspace]
resolver = "2"
members = ["pipeline-core", "pipeline-cli"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6"
walkdir = "2"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
