[package]
name = "chicago-tdd-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = "3.10"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
unify-wasm = { path = "../unify-rs/unify-wasm" }
un-test-utils = { path = "../tools/un-test-utils" }
genie-core = { path = "../unify-rs/genie-core" }
blueprint-core = { path = "../blueprint-rs/blueprint-core" }
blueprint-testing = { path = "../blueprint-rs/blueprint-testing" }
serde_json = "1.0"
