[workspace]
resolver = "2"
members = [
    "crates/nexus-types",
    "crates/nexus-combat",
    "crates/nexus-session",
    "crates/nexus-economy",
    "crates/nexus-net",
    "crates/nexus-ecs",
    "crates/nexus-gfx",
    "crates/nexus-tests",
    "crates/nexus-shop",
    "crates/nexus-integration",
]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Math
nalgebra = { version = "0.33", features = ["serde-serialize"] }
glam = { version = "0.27", features = ["serde"] }

# RNG
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"

# ECS
hecs = { version = "0.10", features = ["serde"] }

# Testing
proptest = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / hashing
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crate-local paths
nexus-types = { path = "crates/nexus-types" }
nexus-combat = { path = "crates/nexus-combat" }
nexus-session = { path = "crates/nexus-session" }
nexus-economy = { path = "crates/nexus-economy" }
nexus-ecs = { path = "crates/nexus-ecs" }
nexus-gfx = { path = "crates/nexus-gfx" }
nexus-shop = { path = "crates/nexus-shop" }
nexus-net = { path = "crates/nexus-net" }
