[workspace]
members = [
    "unify-core",
    "unify-sem",
    "unify-admission",
    "unify-receipts",
    "unify-macros",
    "unify-cli",
    "unify-rdf",
    "unify-lsp",
    "unify-test",
    "unify-pm",
    "unify-codegen",
    "unify-otel",
    "unify-ocel",
    "unify-wasm",
    "unify-ffi",
    "unify-config",
    "unify-mcp",
    "unify-bp",
    "unify-integration-tests",
    "unify-rocket",
    "unify",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
blake3      = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive"] }
