[workspace]
members = [
    "unify-core",
    "unify-sem",
    "unify-admission",
    "unify-receipts",
    "unify-rdf",
    "unify-lsp",
    "unify-test",
    "unify-ffi",
    "unify-config",
    "unify-mcp",
    "unify-bp",
    "unify-integration-tests",
    "unify-ocel",
    "unify-pm",
    "unify-rocket",
    "unify",
    "anti-llm-cheat-lsp",
    "genie-core",
    "unify-automl",
    "unify-wasm",
    "../genie3-rs",
]
resolver = "2"

# [patch.crates-io]
# wasm4pm-compat = { path = "../tools/wasm4pm-compat-stub" }

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2.0"
anyhow      = "1"
blake3      = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive"] }
lsp-max          = "26.6.9"
lsp-max-protocol = "26.6.9"
lsp-max-runtime  = "26.6.9"
