[workspace]
members = [
  "wasm-core",
  "wasm-game-logic",
  "wasm-ui",
  "wasm-patterns",
  "wasm-tests",
]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2.125"
js-sys = "0.3.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
proptest = "1"
