[package]
name = "pipeline-core"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
