[package]
name = "blueprint-core"
version = "0.1.0"
edition = "2021"
description = "Core types for writing UE4 Blueprints in Rust — T3D output, node graph, BlueprintBuilder"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
