[workspace]
members = ["ib4-core", "ib4-combat", "ib4-progression", "ib4-ai", "ib4-mud"]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "1"
clap        = { version = "4", features = ["derive"] }
rand        = "0.8"
colored     = "2"
