[workspace]
members = ["ib4-core", "ib4-combat", "ib4-progression", "ib4-ai", "ib4-mud", "ib4-integration-tests"]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "2.0"
clap        = { version = "4", features = ["derive"] }
rand        = "0.10"
colored     = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4" }

