[package]
name = "simulator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
rand = "0.8"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
getrandom = { version = "0.2", features = ["js"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
