[package]
name = "rocket-cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
linkme = "0.3"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap_complete = "4.5"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["events"] }
rayon = "1.10"
rust-ini = "0.21"
walkdir = "2.5"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
dialoguer = "0.11"
rcgen = "0.13"
p12-keystore = "0.2"
indicatif = "0.17"
ignore = "0.4"
color-eyre = "0.6"
cargo_metadata = "0.19.1"
rocket-sdk = { path = "../rocket-sdk" }
knhk = { path = "../knhk" }
unrdf = { path = "../unrdf" }
wasmer = { version = "4.4.0", default-features = false, features = ["sys", "singlepass", "wat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
blake3 = "1.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
un-test-utils = { path = "../un-test-utils" }
tempfile = "3"
