[package]
name = "rocket-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
rust-ini = "0.21"
walkdir = "2.5"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
inquire = "0.7"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
ring = "0.17"
base64 = "0.22"
p12-keystore = "0.2"
openssl = "0.10"
indicatif = "0.17"
ignore = "0.4"
git2 = "0.19"
knhk = { path = "../knhk" }
unrdf = { path = "../unrdf" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1.5"
libc = "0.2.186"

[dev-dependencies]
un-test-utils = { path = "../un-test-utils" }
mockall = "0.12"
tempfile = "3.10"
