[package]
name = "anti-llm-cheat-lsp"
version = "0.1.0"
edition = "2021"
description = "Admissibility LSP server detecting LLM-generated stubs and cheats"
publish = false

[dependencies]
tower-lsp = { version = "0.20", features = ["proposed"] }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
toml = "0.8"
regex = "1.10"
aho-corasick = "1"
ignore = "0.4"
memchr = "2.5"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
