[package]
name = "unify-admission"
version = "0.1.0"
edition = "2021"
description = "ANDON gate and admission control"

[dependencies]
unify-receipts = { path = "../unify-receipts" }
anti-llm-cheat-lsp = { path = "../anti-llm-cheat-lsp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
