[package]
name = "unify-bp"
version = "0.1.0"
edition = "2021"
description = "Bridge between unify-rs abstraction layer and blueprint-rs"

[dependencies]
blueprint-core = { path = "../../blueprint-rs/blueprint-core" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
