[package]
name = "unify-config"
version = "0.1.0"
edition = "2021"
description = "Unified configuration manifest for the unify-rs ecosystem"

[dependencies]
unify-core = { path = "../unify-core" }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
