[package]
name = "unify-ffi"
version = "0.1.0"
edition = "2021"
description = "N-API Node.js FFI bindings for the unify-rs ecosystem"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unify-core = { path = "../unify-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
napi = { version = "2", features = ["napi4"], optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
