[package]
name = "unify-lsp"
version = "0.1.0"
edition = "2021"
description = "High-level LSP capability facade bridging lsp-max patterns"

[dependencies]
unify-core = { path = "../unify-core" }
unify-receipts = { path = "../unify-receipts" }
unify-admission = { path = "../unify-admission" }
anti-llm-cheat-lsp = { path = "../anti-llm-cheat-lsp" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-max          = { workspace = true }
lsp-max-protocol = { workspace = true }
lsp-max-runtime  = { workspace = true }
