[package]
name = "unify-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing unify-rs capabilities as tools and resources"

[[bin]]
name = "unify-mcp"
path = "src/main.rs"

[dependencies]
unify-core = { path = "../unify-core" }
blake3 = { workspace = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
