[package]
name = "unify-rdf"
version = "0.1.0"
edition = "2021"
description = "RDF/SPARQL abstraction bridging ggen and unrdf patterns"

[dependencies]
unify-core = { path = "../unify-core" }
unify-sem = { path = "../unify-sem" }
blake3 = { workspace = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
